--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,36 +2,66 @@ set -ga terminal-overrides ",screen-256color*:Tc"
 set-option -g default-terminal "screen-256color"
 set -s escape-time 0
 
-unbind C-b
-set-option -g prefix C-a
-bind-key C-a send-prefix
 set -g status-style 'bg=#333333 fg=#5eacd3'
 
-bind r source-file ~/.tmux.conf
+bind-key r source-file ~/.config/tmux/tmux.conf \; display "Reloaded!"
 set -g base-index 1
 
+# set vi-mode
 set-window-option -g mode-keys vi
-bind -T copy-mode-vi v send-keys -X begin-selection
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+# keybindings
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
 # vim-like pane switching
-bind -r ^ last-window
-bind -r k select-pane -U
-bind -r j select-pane -D
-bind -r h select-pane -L
-bind -r l select-pane -R
+bind h select-pane -L
+bind j select-pane -D 
+bind k select-pane -U
+bind l select-pane -R
 
-bind -r D neww -c "#{pane_current_path}" "[[ -e TODO.md ]] && nvim TODO.md || nvim ~/.dotfiles/personal/todo.md"
+# bind -r D neww -c "#{pane_current_path}" "[[ -e TODO.md ]] && nvim TODO.md || nvim ~/.dotfiles/personal/todo.md"
 
 # forget the find window.  That is for chumps
 bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
 
-bind-key -r i run-shell "tmux neww tmux-cht.sh"
-bind-key -r G run-shell "~/.local/bin/tmux-sessionizer ~/work/nrdp"
-bind-key -r C run-shell "~/.local/bin/tmux-sessionizer ~/work/tvui"
-bind-key -r R run-shell "~/.local/bin/tmux-sessionizer ~/work/milo"
 # bind-key -r L run-shell "~/.local/bin/tmux-sessionizer ~/work/hpack"
-bind-key -r H run-shell "~/.local/bin/tmux-sessionizer ~/personal/vim-with-me"
-bind-key -r T run-shell "~/.local/bin/tmux-sessionizer ~/personal/refactoring.nvim"
-bind-key -r N run-shell "~/.local/bin/tmux-sessionizer ~/personal/harpoon"
-bind-key -r S run-shell "~/.local/bin/tmux-sessionizer ~/personal/developer-productivity"
+set -g mouse on
+# Start windows and panes at 1, not 0
+set -g pane-base-index 1
+set-window-option -g pane-base-index 1
+set-option -g renumber-windows on
+
+# Use Alt-arrow keys without prefix key to switch panes
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+
+# Shift arrow to switch windows
+bind -n S-Left  previous-window
+bind -n S-Right next-window
+
+# Shift Alt vim keys to switch windows without prefix key
+bind -n M-H previous-window
+bind -n M-L next-window
+
+set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.tmux/plugins/'
+
+set -g @catppuccin_flavour 'mocha'
+set -g @continuum-restore 'on'
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-open'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+run '~/.tmux/plugins/tpm/tpm'
+
+bind '"' split-window -v -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}" 
+bind q confirm-before -p "kill-session #S? (y/n)" kill-session
