--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -50,6 +50,7 @@ set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.tmux/plugins/'
 
 set -g @catppuccin_flavour 'mocha'
 set -g @continuum-restore 'on'
+set -g @resurrect-dir '$HOME/.tmux/resurrect'
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
