--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,8 +1,5 @@
-set -ga terminal-overrides ",screen-256color*:Tc"
-set-option -g default-terminal "screen-256color"
 set -s escape-time 0
-
-set -g status-style 'bg=#333333 fg=#5eacd3'
+set-option -g status-position top
 
 bind-key r source-file ~/.config/tmux/tmux.conf \; display "Reloaded!"
 set -g base-index 1
