add starship config

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,16 @@
 set -s escape-time 0
 set-option -g status-position top
 
+# Set the interval for updating the status bar to 10 seconds
+set -g status-interval 10
+
+# Enable setting titles for Tmux windows
+set -g set-titles on
+# Set the left side of the status bar to display the Starship prompt
+set -g status-left '$(starship) '
+# Set the right side of the status bar to display the current window index, hostname, and current directory
+set -g status-right "#[fg=white]#I #[fg=yellow]#H #R"
+
 bind-key r source-file ~/.config/tmux/tmux.conf \; display "Reloaded!"
 set -g base-index 1
 
