--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -16,10 +16,56 @@ set -g base-index 1
 
 # set vi-mode
 set-window-option -g mode-keys vi
-# keybindings
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+
+# switch panes (copy-mode)
+bind-key -T copy-mode-vi C-h      if-shell "${IS_VIM} || ${IS_FZF}" "send-keys C-h" "select-pane -L"
+bind-key -T copy-mode-vi C-j      if-shell "${IS_VIM} || ${IS_FZF}" "send-keys C-j" "select-pane -D"
+bind-key -T copy-mode-vi C-k      if-shell "${IS_VIM} || ${IS_FZF}" "send-keys C-k" "select-pane -U"
+bind-key -T copy-mode-vi C-l      if-shell "${IS_VIM} || ${IS_FZF}" "send-keys C-l" "select-pane -R"
+bind-key -T copy-mode    C-h      if-shell "${IS_VIM} || ${IS_FZF}" "send-keys C-h" "select-pane -L"
+bind-key -T copy-mode    C-j      if-shell "${IS_VIM} || ${IS_FZF}" "send-keys C-j" "select-pane -D"
+bind-key -T copy-mode    C-k      if-shell "${IS_VIM} || ${IS_FZF}" "send-keys C-k" "select-pane -U"
+bind-key -T copy-mode    C-l      if-shell "${IS_VIM} || ${IS_FZF}" "send-keys C-l" "select-pane -R"
+
+###############
+#  COPY MODE  #
+###############
+
+# set clipboard
+set-option -g set-clipboard external
+
+# copy and paste
+bind-key C-y copy-mode
+bind-key   y copy-mode
+bind-key   p paste-buffer
+
+# copy mode bindings
+bind-key -T copy-mode-vi v                 send-keys -X begin-selection
+bind-key -T copy-mode-vi C-v               send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi Space             send-keys -X clear-selection
+bind-key -T copy-mode-vi d                 send-keys -X halfpage-down
+bind-key -T copy-mode-vi u                 send-keys -X halfpage-up
+bind-key -T copy-mode-vi y                 send-keys -X copy-pipe-no-clear   'xclip -in -selection clipboard'
+bind-key -T copy-mode-vi Enter             send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-no-clear   'xclip -in -selection primary'
+bind-key -T copy-mode-vi q                 send-keys -X cancel
+bind-key -T copy-mode-vi /                 command-prompt -p '/'              'send-keys -X search-backward %1'
+bind-key -T copy-mode-vi ?                 command-prompt -p '?'              'send-keys -X search-forward %1'
+bind-key -T copy-mode-vi Escape            if-shell -F '#{selection_present}' 'send-keys -X clear-selection' 'send-keys -X cancel'
+
+# scroll speed
+bind-key -T copy-mode-vi WheelUpPane   send-keys -N 1 -X scroll-up
+bind-key -T copy-mode-vi WheelDownPane send-keys -N 1 -X scroll-down
+bind-key -T copy-mode    WheelUpPane   send-keys -N 1 -X scroll-up
+bind-key -T copy-mode    WheelDownPane send-keys -N 1 -X scroll-down
+
+
+####################
+#  MOUSE BINDINGS  #
+####################
+
+bind-key -n DoubleClick1StatusLeft switch-client -n
+
 
 # vim-like pane switching
 bind h select-pane -L
@@ -64,7 +110,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
-set -g @plugin 'tmux-plugins/tmux-yank'
+#set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
