fix exiting tmux when close a session

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,6 +4,9 @@ set-option -g status-position top
 # Set the interval for updating the status bar to 10 seconds
 set -g status-interval 10
 
+# don't exit when close a session
+set-option -g detach-on-destroy off
+
 # Enable setting titles for Tmux windows
 set -g set-titles on
 # Set the left side of the status bar to display the Starship prompt
@@ -110,7 +113,6 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
-#set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
