--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "nvim/.config/nvim"]
+[submodule "nvim/.config"]
 	path = nvim/.config
 	url = https://github.com/bmihovski/dusk.nvim.git
