make compatible with old ubuntu

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -14,7 +14,7 @@ set -g status-left '$(starship) '
 # Set the right side of the status bar to display the current window index, hostname, and current directory
 set -g status-right "#[fg=white]#I #[fg=yellow]#H #R"
 
-bind-key r source-file ~/.config/tmux/tmux.conf \; display "Reloaded!"
+bind-key r source-file ~/.tmux.conf \; display "Reloaded!"
 set -g base-index 1
 
 # set vi-mode
@@ -72,7 +72,7 @@ bind-key -n DoubleClick1StatusLeft switch-client -n
 
 # vim-like pane switching
 bind h select-pane -L
-bind j select-pane -D 
+bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
@@ -120,5 +120,5 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 run '~/.tmux/plugins/tpm/tpm'
 
 bind '"' split-window -v -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}" 
+bind % split-window -h -c "#{pane_current_path}"
 bind q confirm-before -p "kill-session #S? (y/n)" kill-session
