--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -122,3 +122,5 @@ run '~/.tmux/plugins/tpm/tpm'
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind q confirm-before -p "kill-session #S? (y/n)" kill-session
+set -g default-terminal "screen-256color"
+set-option -sa terminal-overrides ',xterm-256color:RGB'
