--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -110,6 +110,7 @@ set -g @continuum-save-interval '60'
 set -g @resurrect-dir '$HOME/.tmux/resurrect'
 
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
