add latest nvim and fix resurection plugin after os upgrade

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -107,7 +107,8 @@ set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.tmux/plugins/'
 set -g @catppuccin_flavour 'mocha'
 set -g @continuum-restore 'on'
 set -g @continuum-save-interval '60'
-set -g @resurrect-dir '$HOME/.tmux/resurrect'
+set -g @resurrect-dir '~/.tmux/resurrect'
+set -g @resurrect-strategy-nvim 'session'
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'sainnhe/tmux-fzf'
@@ -125,3 +126,4 @@ bind % split-window -h -c "#{pane_current_path}"
 bind q confirm-before -p "kill-session #S? (y/n)" kill-session
 set -g default-terminal "screen-256color"
 set-option -sa terminal-overrides ',xterm-256color:RGB'
+
