add latest nvim and blesh

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,6 @@
 set -s escape-time 0
 set-option -g status-position top
-
+set -g extended-keys always
 # Set the interval for updating the status bar to 10 seconds
 set -g status-interval 10
 
