add maximized alacritty window

--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -25,3 +25,6 @@ style = "Italic"
 # family = "MesloLGS Nerd Font Mono"
 family = "JetBrainsMono Nerd Font"
 style = "Regular"
+
+[window]
+startup_mode = "Maximized"
