--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -19,6 +19,8 @@ set -g base-index 1
 
 # set vi-mode
 set-window-option -g mode-keys vi
+# required for nvim zen mode
+set-option -g allow-passthrough on
 
 # switch panes (copy-mode)
 bind-key -T copy-mode-vi C-h      if-shell "${IS_VIM} || ${IS_FZF}" "send-keys C-h" "select-pane -L"
