--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -34,5 +34,5 @@ semantic_escape_chars = ",│`|:\"' ()[]{}<>\t"
 save_to_clipboard = false
 
 [shell]
-program = "tmux"
-args = ["-u", "at"]
+program = "/usr/bin/bash"   # Use the command `whereis bash` or `which bash` to verify the location of your bash executable
+args = ["-l", "-c", "tmux has-session 2>/dev/null && tmux -u attach || tmux -u new"]
