--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -2,6 +2,7 @@ import = ["~/.config/alacritty/catppuccin-mocha.toml"]
 
 [env]
 TERM = "xterm-256color"
+PATH = "/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin"
 
 [font]
 size = 14.0
@@ -31,7 +32,7 @@ startup_mode = "Maximized"
 
 [selection]
 semantic_escape_chars = ",│`|:\"' ()[]{}<>\t"
-save_to_clipboard = false
+save_to_clipboard = true
 
 [shell]
 program = "/usr/bin/bash" # Use the command `whereis bash` or `which bash` to verify the location of your bash executable
@@ -40,6 +41,34 @@ args = [
   "-c",
   "tmux has-session 2>/dev/null && tmux -u attach || tmux -u new",
 ]
+
+[scrolling]
+
+# Maximum number of lines in the scrollback buffer.
+# Specifying 0 will disable scrolling.
+# Limited to 100000.
+# Default: 10000
+history = 50000
+
+# Number of line scrolled for every input scroll increment.
+# Default: 3
+multiplier = 5
+
+[cursor]
+
+# shape = "Block" | "Underline" | "Beam", Default: "Block"
+# blinking = "Never" | "Off" | "On" | "Always", Default: "Off"
+style = { shape = "Block", blinking = "Always" }
+
+# Cursor blinking interval in milliseconds.
+# Default: 750
+blink_interval = 500
+
+[mouse]
+
+# When this is true, the cursor is temporarily hidden when typing.
+# Default: false
+hide_when_typing = true
 
 [[hints.enabled]]
 command = "xdg-open"
