--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -37,6 +37,7 @@ bind-key -T copy-mode    C-l      if-shell "${IS_VIM} || ${IS_FZF}" "send-keys C
 ###############
 
 # set clipboard
+set-option -g set-clipboard on
 set-option -g set-clipboard external
 
 # copy and paste
@@ -125,4 +126,5 @@ bind % split-window -h -c "#{pane_current_path}"
 bind q confirm-before -p "kill-session #S? (y/n)" kill-session
 set -g default-terminal "screen-256color"
 set-option -sa terminal-overrides ',xterm-256color:RGB'
+set -a terminal-features 'screen-256color:RGB'
 
